Bug 402572 - Task tooltip does not hide when I move the mouse into it then go out
Summary: Task tooltip does not hide when I move the mouse into it then go out
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-26 03:50 UTC by trmdi
Modified: 2018-12-29 18:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video (105.93 KB, video/mp4)
2018-12-26 03:50 UTC, trmdi
Details
steps to reproduce the bug (302.87 KB, video/mp4)
2018-12-26 12:58 UTC, trmdi
Details
video (1) (372.98 KB, video/mp4)
2018-12-28 17:34 UTC, trmdi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description trmdi 2018-12-26 03:50:50 UTC
Created attachment 117113 [details]
video

Task tooltip does not hide when I move the mouse into it then go out.
Please see the video.
Comment 1 trmdi 2018-12-26 04:01:36 UTC
Steps to reproduce it:
- Open a window, drag from the Latte panel to move it.
- Hover the icon on the dock to show the tooltip, move the mouse into the tooltip then go out, like I present in the video.
Comment 2 Michail Vourlakos 2018-12-26 08:21:40 UTC
Are you doing something special to reproduce? I am trying in my system and I cant reproduce
Comment 3 trmdi 2018-12-26 12:58:20 UTC
Created attachment 117117 [details]
steps to reproduce the bug

Nothing special. Here is how I reproduce it.
Note that the bug only happens after I drag and move the window from the Latte panel.
Comment 4 trmdi 2018-12-28 17:34:07 UTC
Created attachment 117152 [details]
video (1)

another video to present the bug

- note that when I move the mouse out of the tooltip, the signal containMouse is not emitted.
- another weird thing is that the tooltip displays on top of the App Dashboard menu.

*** remember that the bug only happens after I used the "drag from Latte panel to move the active window" feature.
Comment 5 trmdi 2018-12-29 15:40:05 UTC
I don't really understand what this line does, but when I comment it, the bug goes away.

https://github.com/KDE/latte-dock/blob/master/app/view/view.cpp#L1024
Comment 6 Michail Vourlakos 2018-12-29 16:39:17 UTC
ok... now I managed to reproduce...

this code, disable/restoreGrabItemBehavior was the only way I found in order to drag from Latte panel and moving the active window properly afterwards.

This code is called only from file: https://github.com/KDE/latte-dock/blob/master/containment/package/contents/ui/RootMouseArea.qml

a small work-around is to right click a task after that occurs, afterwards the issue is fixed...

so this needs investigation how to handle... I dont know if something in the restoreGrabItemBehavior would help...
Comment 7 Michail Vourlakos 2018-12-29 17:21:08 UTC
(In reply to trmdi from comment #5)
> I don't really understand what this line does, but when I comment it, the
> bug goes away.
> 
> https://github.com/KDE/latte-dock/blob/master/app/view/view.cpp#L1024

THANK YOU!!!

this was very serious! because it was breaking all mouse events for all other docks/panels...

the fix is just to remove that line you mention, everything works fine afterwards, meaning dragging active windows and containsMouse events to work properly...

Would you like to make a commit for this directly or from phabricator? or if you dont have access I can commit it for you
Comment 8 trmdi 2018-12-29 17:25:58 UTC
Nice to hear that.
But I'm too lazy to do it, your go. ;-)
Comment 9 Michail Vourlakos 2018-12-29 18:21:18 UTC
Git commit 63e9fbc99fe117448bd099b5aa839759411acfac by Michail Vourlakos.
Committed on 29/12/2018 at 18:20.
Pushed by mvourlakos into branch 'master'.

dont block mouse events with no reason

M  +0    -2    app/view/view.cpp

https://commits.kde.org/latte-dock/63e9fbc99fe117448bd099b5aa839759411acfac