dont block mouse events with no reason

BUG: 402572